--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,14 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="abg.ico">
+  <link rel="icon" type="image/x-icon" href="if_HSV_131841.ico">
   <link rel="manifest"  href="manifest.json">
 
   <!-- Ios Meta Tag to support Home Screen feature -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Deletion Prep App">
-<link rel ="apple-touch-icon" href="abg.ico" sizes="120x120">
-<link rel ="apple-touch-icon" href="abg.ico" sizes="180x180">
+<link rel ="apple-touch-icon" href="if_HSV_131841.ico" sizes="120x120">
+<link rel ="apple-touch-icon" href="if_HSV_131841.ico" sizes="180x180">
 <!-- Tos Tag ended-->
 
 </head>
