--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="icon" type="image/x-icon" href="launcher-ico-3x.png">
+ <link rel="icon" type="image/png" href="icons/icon_96.png">
   <link rel="manifest"  href="manifest.json">
 
   <!-- Ios Meta Tag to support Home Screen feature -->
