--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
   <!-- Ios Meta Tag to support Home Screen feature -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Deletion Prep App">
-<link rel ="apple-touch-icon" href="favicon.ico" sizes="120x120">
-<link rel ="apple-touch-icon" href="favicon.ico" sizes="180x180">
+<link rel ="apple-touch-icon" href="icons/icon_ios_120.png" sizes="120x120">
+<link rel ="apple-touch-icon" href="icons/icon_ios_180.png" sizes="180x180">
 <!-- Tos Tag ended-->
 
 </head>
