--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,10 @@
   <meta charset="utf-8">
   <title>Del Prep App</title>
   <base href="/">
-
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="manifest"  href="manifest.json">
   <meta name="viewport" content="width=device-width, initial-scale=1">
  <link rel="icon" type="image/png" href="icons/icon_96.png">
-
-  <link rel="manifest"  href="manifest.json">
 
   <!-- Ios Meta Tag to support Home Screen feature -->
 <meta name="apple-mobile-web-app-capable" content="yes">
